# kubectl-application-shell

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: main.yml
completion/: bash_install.sh  fish_install.sh  kubectl-application-shell.bash  kubectl-application-shell.fish  kubectl-application-shell.zsh  zsh_install.sh
kubectl_application_shell/: __main__.py  app.py  cli.py  func.py
src/: kubectl-application-shell  kubectl-application-shell.py
src/kubectl_application_shell/: __main__.py  app.py  cli.py  console.py  func.py
